src/objects/System_Limits__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object is used to store criteria that limit the amount of data pulled/ updated by pages and queries, for performance purposes. The org-level values can be overriden for a user by temporarily granting them a user-level setting with expanded limits.</description>
    <fields>
        <fullName>CEXReferralWindow__c</fullName>
        <description>This value is used to calculate the number of days from the start of a class that Clients can be referred to a CEX class.</description>
        <label>CEXReferralWindow</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Catalog_End_Date_Offset__c</fullName>
        <inlineHelpText>The number of days from today to default the Course Catalog Search&apos;s End Date field.</inlineHelpText>
        <label>Course Catalog - End Date Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Catalog_Start_Date_Offset__c</fullName>
        <inlineHelpText>The number of days from today for the default value in the Course Catalog Search&apos;s Start Date. If the value should be prior to today, use a negative number, i.e. for 7 days prior to today enter -7.</inlineHelpText>
        <label>Course Catalog - Start Date Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Grading_Sess_Range_End_Offset__c</fullName>
        <inlineHelpText>Used in the course grading page for setting the number of days to find a starting session. This field is the number of days from today to finish looking for session start dates.</inlineHelpText>
        <label>Course Grading - Sess Range End Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Grading_Sess_Range_Start_Offset__c</fullName>
        <inlineHelpText>Used in the course grading page for setting the number of days to find a starting session.  This field is the number of days from today to begin looking for session start dates.</inlineHelpText>
        <label>Course Grading - Sess Range Start Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Enrollment__c</fullName>
        <inlineHelpText>Maximum number of students to be enrolled at one time</inlineHelpText>
        <label>Max Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>System Limits</label>
</CustomObject>